# bst

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  REFLECTION.md
.github/workflows/: build-and-lint.yml
src/: bst.c  bst.h  bstFG.c  main.c  stack.c  stack.h
